# viravis.rs

./: Cargo.toml  README.md
src/: graph.rs  lib.rs  main.rs  viravis.rs
src/analyzers/: analyzer.rs  analyzer_fft.rs  analyzer_rolling.rs  mod.rs  utils.rs
src/modules/: http.rs  mod.rs  serial.rs  server.rs  websocket.rs
