[package]
name = "viravis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
cpal = "0.15.3"
ctrlc = "3.4.5"
json = "0.12.4"
realfft = "3.3.0"
rustfft = "6.2.0"
serialport = "4.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
websocket = "0.27.1"
